updating some polish strings

--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -101,10 +101,10 @@
 
     <!-- Sorting -->
     <string name="sort_by">Sortuj według</string>
-    <string name="name">Nazwy</string>
-    <string name="size">Rozmiaru</string>
-    <string name="last_modified">Ostatnio modyfikowanych</string>
-    <string name="date_taken">Daty</string>
+    <string name="name">Nazwa</string>
+    <string name="size">Rozmiar</string>
+    <string name="last_modified">Ostatnio modyfikowany</string>
+    <string name="date_taken">Data</string>
     <string name="title">Tytuł</string>
     <string name="filename">Nazwa pliku</string>
     <string name="extension">Rozszerzenie</string>
