add a "Save as" string

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Abbrechen</string>
     <string name="search">Suche</string>
+    <string name="save_as">Speichern unter</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopieren</string>
