--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancelar</string>
     <string name="search">Search</string>
+    <string name="save_as">Salvar como</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copiar</string>
