--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">Ok</string>
     <string name="cancel">Annuler</string>
     <string name="search">Recherche</string>
+    <string name="save_as">Sauvegarder sous</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copier</string>
