--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">ठीक</string>
     <string name="cancel">रद्द करें</string>
     <string name="search">Search</string>
+    <string name="save_as">Save as</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copy</string>
