--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Annulla</string>
     <string name="search">Cerca</string>
+    <string name="save_as">Salva come </string>
 
     <!-- Copy / Move -->
     <string name="copy">Copia</string>
