--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">OK</string>
     <string name="cancel">キャンセル</string>
     <string name="search">Search</string>
+    <string name="save_as">名前を付けて保存</string>
 
     <!-- Copy / Move -->
     <string name="copy">コピー</string>
