--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Anuluj</string>
     <string name="search">Szukaj</string>
+    <string name="save_as">Zapisz jako</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiuj</string>
