--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancelar</string>
     <string name="search">Pesquisar</string>
+    <string name="save_as">Guardar como</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copiar</string>
