--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Zrušiť</string>
     <string name="search">Hľadať</string>
+    <string name="save_as">Uložiť ako</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopírovať</string>
