--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Avbryt</string>
     <string name="search">Sök</string>
+    <string name="save_as">Spara som</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiera</string>
