--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">TAMAM</string>
     <string name="cancel">İptal</string>
     <string name="search">Arama</string>
+    <string name="save_as">Farklı kaydet</string>
 
     <!-- Kopyala / Taşı -->
     <string name="copy">Kopyala</string>
