--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
     <string name="search">Поиск</string>
+    <string name="save_as">Сохранить как</string>
 
     <!-- Copy / Move -->
     <string name="copy">Копировать</string>
