--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -2,6 +2,7 @@
     <string name="ok">确认</string>
     <string name="cancel">取消</string>
     <string name="search">Search</string>
+    <string name="save_as">保存</string>
 
     <!-- Copy / Move -->
     <string name="copy">复制</string>
