add a "File saved successfully" string

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">Abbrechen</string>
     <string name="search">Suche</string>
     <string name="save_as">Speichern unter</string>
+    <string name="file_saved">Datei erfolgreich gespeichert</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopieren</string>
