--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">Annuler</string>
     <string name="search">Recherche</string>
     <string name="save_as">Sauvegarder sous</string>
+    <string name="file_saved">Fichier sauvegardé avec succès</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copier</string>
