--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">रद्द करें</string>
     <string name="search">Search</string>
     <string name="save_as">Save as</string>
+    <string name="file_saved">File saved successfully</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copy</string>
