--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">Annulla</string>
     <string name="search">Cerca</string>
     <string name="save_as">Salva come </string>
+    <string name="file_saved">File salvato correttamente</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copia</string>
