--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">キャンセル</string>
     <string name="search">Search</string>
     <string name="save_as">名前を付けて保存</string>
+    <string name="file_saved">ファイルを正常に保存しました</string>
 
     <!-- Copy / Move -->
     <string name="copy">コピー</string>
