--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">Anuluj</string>
     <string name="search">Szukaj</string>
     <string name="save_as">Zapisz jako</string>
+    <string name="file_saved">Plik zapisany</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiuj</string>
