--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">Отмена</string>
     <string name="search">Поиск</string>
     <string name="save_as">Сохранить как</string>
+    <string name="file_saved">Файл успешно сохранен</string>
 
     <!-- Copy / Move -->
     <string name="copy">Копировать</string>
