--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">Avbryt</string>
     <string name="search">Sök</string>
     <string name="save_as">Spara som</string>
+    <string name="file_saved">Filen sparad</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiera</string>
