--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">İptal</string>
     <string name="search">Arama</string>
     <string name="save_as">Farklı kaydet</string>
+    <string name="file_saved">Dosya başarıyla kaydedildi</string>
 
     <!-- Kopyala / Taşı -->
     <string name="copy">Kopyala</string>
