--- a/commons/src/main/res/values-ca-rES/strings.xml
+++ b/commons/src/main/res/values-ca-rES/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">Cancelar</string>
     <string name="search">Search</string>
     <string name="save_as">Salvar como</string>
+    <string name="file_saved">Archivo guardado con éxito</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copiar</string>
