--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">Cancelar</string>
     <string name="search">Pesquisar</string>
     <string name="save_as">Guardar como</string>
+    <string name="file_saved">Ficheiro guardado com sucesso</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copiar</string>
