--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">Zrušiť</string>
     <string name="search">Hľadať</string>
     <string name="save_as">Uložiť ako</string>
+    <string name="file_saved">Súbor bol úspešne uložený</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopírovať</string>
