--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -3,6 +3,7 @@
     <string name="cancel">取消</string>
     <string name="search">Search</string>
     <string name="save_as">保存</string>
+    <string name="file_saved">文件保存成功</string>
 
     <!-- Copy / Move -->
     <string name="copy">复制</string>
