add a new string for invalid file format

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -4,6 +4,7 @@
     <string name="search">Suche</string>
     <string name="save_as">Speichern unter</string>
     <string name="file_saved">Datei erfolgreich gespeichert</string>
+    <string name="invalid_file_format">Invalid file format</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopieren</string>
