--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -4,6 +4,7 @@
     <string name="search">Recherche</string>
     <string name="save_as">Sauvegarder sous</string>
     <string name="file_saved">Fichier sauvegardé avec succès</string>
+    <string name="invalid_file_format">Invalid file format</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copier</string>
