--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -4,6 +4,7 @@
     <string name="search">Szukaj</string>
     <string name="save_as">Zapisz jako</string>
     <string name="file_saved">Plik zapisany</string>
+    <string name="invalid_file_format">Invalid file format</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiuj</string>
