--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -4,6 +4,7 @@
     <string name="search">Hľadať</string>
     <string name="save_as">Uložiť ako</string>
     <string name="file_saved">Súbor bol úspešne uložený</string>
+    <string name="invalid_file_format">Neplatný formát súboru</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopírovať</string>
