--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -4,6 +4,7 @@
     <string name="search">Arama</string>
     <string name="save_as">Farklı kaydet</string>
     <string name="file_saved">Dosya başarıyla kaydedildi</string>
+    <string name="invalid_file_format">Invalid file format</string>
 
     <!-- Kopyala / Taşı -->
     <string name="copy">Kopyala</string>
