--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -4,6 +4,7 @@
     <string name="search">Search</string>
     <string name="save_as">保存</string>
     <string name="file_saved">文件保存成功</string>
+    <string name="invalid_file_format">Invalid file format</string>
 
     <!-- Copy / Move -->
     <string name="copy">复制</string>
