--- a/commons/src/main/res/values-ca-rES/strings.xml
+++ b/commons/src/main/res/values-ca-rES/strings.xml
@@ -4,6 +4,7 @@
     <string name="search">Search</string>
     <string name="save_as">Salvar como</string>
     <string name="file_saved">Archivo guardado con éxito</string>
+    <string name="invalid_file_format">Invalid file format</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copiar</string>
