--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -4,6 +4,7 @@
     <string name="search">Search</string>
     <string name="save_as">Save as</string>
     <string name="file_saved">File saved successfully</string>
+    <string name="invalid_file_format">Invalid file format</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copy</string>
