--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -4,6 +4,7 @@
     <string name="search">Cerca</string>
     <string name="save_as">Salva come </string>
     <string name="file_saved">File salvato correttamente</string>
+    <string name="invalid_file_format">Invalid file format</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copia</string>
