--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -4,6 +4,7 @@
     <string name="search">Sök</string>
     <string name="save_as">Spara som</string>
     <string name="file_saved">Filen sparad</string>
+    <string name="invalid_file_format">Invalid file format</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopiera</string>
